[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
dunce = "1.0.5"
errno = "0.3.14"
libc = "0.2"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Hypervisor", "Win32_System_Memory"] }
